update jar